package regist

import (
	"fmt"
	"io/ioutil"
)

var (
	protoPacket = make(map[string]uint32) //响应协议
	protoUnpack = make(map[string]uint32) //请求协议
)

type proto struct {
	name string
	code uint32
}

var protosUnpack = []proto{
	{name: "CLogin", code: 1000},
	{name: "CRegist", code: 1002},
	{name: "CWxLogin", code: 1004},
	{name: "CBuy", code: 3000},
	{name: "CWxpayOrder", code: 3002},
	{name: "CWxpayQuery", code: 3004},
	{name: "CBuildAgent", code: 3006},
	{name: "CChatText", code: 2000},
	{name: "CChatVoice", code: 2004},
	{name: "CEnterRoom", code: 4000},
	{name: "CLeave", code: 4002},
	{name: "CReady", code: 4004},
	{name: "CCreateRoom", code: 4010},
	{name: "CKick", code: 4014},
	{name: "CDiscard", code: 4029},
	{name: "COperate", code: 4030},
	{name: "CConfig", code: 1030},
	{name: "CUserData", code: 1036},
}

var protosPacket = []proto{
	{name: "SLogin", code: 1000},
	{name: "SRegist", code: 1002},
	{name: "SWxLogin", code: 1004},
	{name: "SBuy", code: 3000},
	{name: "SWxpayOrder", code: 3002},
	{name: "SWxpayQuery", code: 3004},
	{name: "SBuildAgent", code: 3006},
	{name: "SChatText", code: 2000},
	{name: "SChatVoice", code: 2004},
	{name: "SEnterRoom", code: 4000},
	{name: "SLeave", code: 4002},
	{name: "SReady", code: 4004},
	{name: "SCreateRoom", code: 4010},
	{name: "SKick", code: 4014},
	{name: "SCamein", code: 4022},
	{name: "SGamestart", code: 4025},
	{name: "SDraw", code: 4027},
	{name: "SDiscard", code: 4029},
	{name: "SOperate", code: 4030},
	{name: "SPengKong", code: 4032},
	{name: "SGameover", code: 4036},
	{name: "SConfig", code: 1030},
	{name: "SUserData", code: 1036},
}

//初始化
func Init() {
	//login.proto
	//request
	//registUnpack("messages.CLogin", 1000)
	//registUnpack("messages.CRegist", 1002)
	//registUnpack("messages.CWechatLogin", 1004)
	//response
	//registPacket("messages.SLogin", 1000)
	//registPacket("messages.SRegist", 1002)
	//registPacket("messages.SWechatLogin", 1004)
	//room.proto
	//---
	//request
	for _, v := range protosUnpack {
		registUnpack(v.name, v.code)
	}
	//response
	for _, v := range protosPacket {
		registPacket(v.name, v.code)
	}
	//最后生成MsgID.lua文件
	genMsgID()
}

func registUnpack(key string, code uint32) {
	if _, ok := protoUnpack[key]; ok {
		panic(fmt.Sprintf("%s registered: %d", key, code))
	}
	protoUnpack[key] = code
}

func registPacket(key string, code uint32) {
	if _, ok := protoPacket[key]; ok {
		panic(fmt.Sprintf("%s registered: %d", key, code))
	}
	protoPacket[key] = code
}

//生成文件
func Gen() {
	gen_packet()
	gen_unpack()
	//client
	gen_client_packet()
	gen_client_unpack()
}

//生成打包文件
func gen_packet() {
	var str string
	str += head_packet()
	str += body_packet()
	str += end_packet()
	err := ioutil.WriteFile("../socket/packet.go", []byte(str), 0644)
	if err != nil {
		panic(fmt.Sprintf("write file err -> %v\n", err))
	}
}

//生成解包文件
func gen_unpack() {
	var str string
	str += head_unpack()
	str += body_unpack()
	str += end_unpack()
	err := ioutil.WriteFile("../socket/unpack.go", []byte(str), 0644)
	if err != nil {
		panic(fmt.Sprintf("write file err -> %v\n", err))
	}
}

func body_unpack() string {
	var str string
	for k, v := range protoUnpack {
		str += fmt.Sprintf("case %d:\n\t\tmsg := &messages.%s{}\n\t\t%s\n\t", v, k, result_unpack())
	}
	return str
}

func body_packet() string {
	var str string
	for k, v := range protoPacket {
		str += fmt.Sprintf("case *messages.%s:\n\t\tb, err := msg.(*messages.%s).Marshal()\n\t\t%s\n\t", k, k, result_packet(v))
	}
	return str
}

func head_packet() string {
	return fmt.Sprintf(`// Code generated by protoc-gen-main.
// source: regist/msg.go
// DO NOT EDIT!

package socket

import (
	"errors"
	"protoactor/messages"
)

//打包消息
func packet(msg interface{}) (uint32, []byte, error) {
	switch msg.(type) {
	`)
}

func head_unpack() string {
	return fmt.Sprintf(`// Code generated by protoc-gen-main.
// source: regist/msg.go
// DO NOT EDIT!

package socket

import (
	"errors"
	"protoactor/messages"
)

//解包消息
func unpack(id uint32, b []byte) (interface{}, error) {
	switch id {
	`)
}

func result_packet(code uint32) string {
	return fmt.Sprintf("return %d, b, err", code)
}

func result_unpack() string {
	return fmt.Sprintf(`err := msg.Unmarshal(b)
		return msg, err`)
}

func end_packet() string {
	return fmt.Sprintf(`default:
		return 0, []byte{}, errors.New("msg wrong")
	}
}`)
}

func end_unpack() string {
	return fmt.Sprintf(`default:
		return nil, errors.New("msg id wrong")
	}
}`)
}

//生成lua文件
func genMsgID() {
	var str string
	str += fmt.Sprintf("msgID = {")
	for k, v := range protoUnpack {
		str += fmt.Sprintf("\n\t%s = %d,", k, v)
	}
	str += fmt.Sprintf("\n")
	for k, v := range protoPacket {
		str += fmt.Sprintf("\n\t%s = %d,", k, v)
	}
	str += fmt.Sprintf("\n}")
	err := ioutil.WriteFile("./MsgID.lua", []byte(str), 0666)
	if err != nil {
		panic(fmt.Sprintf("write file err -> %v\n", err))
	}
}

/*
msgID = {
	RegisterReq = 0
,	RegisterRes = 1
,	LoginReq = 2
,	LoginRes = 3
,}
func genMsgID() {
	//go_path := os.Getenv("GOPATH")
	//if go_path == "" {
	//	panic(errors.New("GOPATH is not set"))
	//}
	//file, err := os.OpenFile(go_path+"/bin/MsgID.lua", os.O_RDWR|os.O_TRUNC|os.O_CREATE, 0666)
	file, err := os.OpenFile("./MsgID.lua", os.O_RDWR|os.O_TRUNC|os.O_CREATE, 0666)
	defer file.Close()
	if err != nil {
		panic(err)
	}

	_, err = file.WriteString("msgID = {\n")
	if err != nil {
		panic(err)
	}
	ProtobufProcessor.Range(func(id uint16, t reflect.Type) {
		str := fmt.Sprintf("\t%s = %d\n,", t.Elem().Name(), id)
		_, err = file.WriteString(str)
		if err != nil {
			panic(err)
		}
	})
	_, err = file.WriteString("}\n")
	if err != nil {
		panic(err)
	}
}
*/

//生成机器人打包文件
func gen_client_packet() {
	var str string
	str += head_packet()
	str += body_client_packet()
	str += end_packet()
	err := ioutil.WriteFile("../robots/packet.go", []byte(str), 0644)
	if err != nil {
		panic(fmt.Sprintf("write file err -> %v\n", err))
	}
}

//生成机器人解包文件
func gen_client_unpack() {
	var str string
	str += head_unpack()
	str += body_client_unpack()
	str += end_unpack()
	err := ioutil.WriteFile("../robots/unpack.go", []byte(str), 0644)
	if err != nil {
		panic(fmt.Sprintf("write file err -> %v\n", err))
	}
}

func body_client_packet() string {
	var str string
	for k, v := range protoUnpack {
		str += fmt.Sprintf("case *messages.%s:\n\t\tb, err := msg.(*messages.%s).Marshal()\n\t\t%s\n\t", k, k, result_packet(v))
	}
	return str
}

func body_client_unpack() string {
	var str string
	for k, v := range protoPacket {
		str += fmt.Sprintf("case %d:\n\t\tmsg := &messages.%s{}\n\t\t%s\n\t", v, k, result_unpack())
	}
	return str
}
